fixed the css issue with white space on the right.

--- a/app/assets/stylesheets/_post.scss
+++ b/app/assets/stylesheets/_post.scss
@@ -1710,7 +1710,6 @@ h4 {
     width: 100%;
     height: 100%;
     margin: 0px;
-    margin-right: 20px;
     padding: 0px;
     overflow-x: hidden; 
 }
